[package]
name = "skf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3"
rust-crypto = "0.2.36"
byteorder = "1"
clap = "2.33.3"
embed-resource = "1.5.1"
slog = "2.7.0"
slog-term = "2.8.0"

[dependencies.rmp]
cipher = { version = "0.3", features = ["dev"] }